[tool.poetry]
name = "coin_guard_api"
version = "0.1.0"
description = ""
authors = ["PodYapolskiy <podyapolskiyaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
jwt = "^1.3.1"
sqlalchemy = "^2.0.36"
motor = "^3.6.0"
hydra-core = "^1.3.2"
sqlalchemy-timescaledb = "^0.4.1"
psycopg2-binary = "^2.9.10"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
